Fix site's width
I've realized that I had the website open on just a half of my screen, so the website didn't look quite as I intended in full screen mode, so fixed that

--- a/style.css
+++ b/style.css
@@ -102,3 +102,8 @@ h1.tag {
 .logo {
     vertical-align: middle;
 }
+
+.container {
+    width: 900px; 
+    margin: 0 auto;
+}
